--- a/算法模板.md
+++ b/算法模板.md
@@ -922,6 +922,10 @@ int main() {
 
 
 
+# 【从动态规划的ppt和sicily开始，Ref wiki】
+
+
+
 ### 双调欧几里得旅行商问题
 
 
@@ -940,3 +944,186 @@ int main() {
 
 ### 0-1  Knapsack Problem
 
+
+
+### Segmented Least Squares
+
+
+
+### 高精度加法
+
+
+
+### 高精度乘法
+
+
+
+
+
+### 多重背包
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <queue>
+#include<iomanip>
+#include <stack>
+#include <algorithm>
+using namespace std;
+
+int number[7] = {0};
+int weight[7] = { 0,3,5,2,6,11,8 };
+double value[7] = { 0,0.01,0.05,0.1,0.25,0.5,1 };
+double Opt[7][100100];
+
+double max(double a, double b) {
+	return (a > b ? a : b);
+}
+
+int main() {
+	int W;
+	while (cin >> W) {
+		for (int i = 1; i <= 6; i++) {
+			cin >> number[i];
+		}
+		for (int i = 0; i <= W; i++) {
+			Opt[0][i] = 0;
+		}
+		for (int i = 1; i <= 6; i++) {
+			for (int j = 0; j <= W; j++) {
+				if (weight[i] > j) {
+					Opt[i][j] = Opt[i - 1][j];
+				}
+				else {
+					Opt[i][j] = 0;
+					for (int k = 0; k <= number[i] && j - weight[i] * k >= 0; k++) {
+						Opt[i][j] = max(Opt[i][j], Opt[i - 1][j - weight[i]*k] + k * value[i]);
+					}
+				}
+			}
+		}
+		cout << fixed << setprecision(2)<< "$" << Opt[6][W] <<endl;
+	}
+}
+```
+
+
+
+### TSP
+
+```C++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <queue>
+#include <iomanip>
+#include <math.h>
+#include <stack>
+#include <algorithm>
+using namespace std;
+
+
+struct  addr
+{
+	double x, y;
+
+	addr() {}
+
+	addr(double x, double y) {
+		this->x = x;
+		this->y = y;
+	}
+};
+
+addr pos[30];
+
+struct sub_str {
+	vector<int> ss;
+
+};
+
+sub_str sub[21];
+
+void clear() {
+	for (int i = 0; i < 21; i++) {
+		sub[i].ss.clear();
+	}
+}
+
+void create_sub(int n) {
+	clear();
+	int s_n = pow(2, n);
+	for (int i = 0; i < s_n; i++) {
+		int temp = i;
+		int count = 0;
+		for (int k = 0; k < n; k++) {
+			if (temp & 1 != 0) {
+				count++;
+			}
+			temp = temp >> 1;
+		}
+		sub[count].ss.push_back(i);
+	}
+}
+
+double dist[30][30];
+const double inf = 999999;
+double C[1050000][30];
+
+double min(double a, double b) {
+	return (a < b ? a : b);
+}
+
+
+int main() {
+	int T;
+	cin >> T;
+	while (T--) {
+		int n;
+		cin >> n;
+		create_sub(n);
+		for (int i = 0; i < n; i++) {
+			double x, y;
+			cin >> pos[i].x >> pos[i].y;
+		}
+		for (int i = 0; i < n; i++) {
+			for (int j = 0; j < n; j++) {
+				dist[i][j] = sqrt((pos[i].x - pos[j].x)*(pos[i].x - pos[j].x) + (pos[i].y - pos[j].y) * (pos[i].y - pos[j].y));
+			}
+		}
+		C[0][0] = 0;
+		double ans;
+		for (int s = 2; s <= n; s++) {
+			for (int S_count = 0; S_count < sub[s].ss.size(); S_count++) {
+				int S = sub[s].ss[S_count];
+				if ((S & 1) > 0) {
+					C[S][0] = inf;
+					for (int j = 1; j < n; j++) {
+						if ((S & (1 << j)) > 0) {	// j in S
+							C[S][j] = inf;
+							for (int i = 0; i < n; i++) {
+								if (i != j && (S & (1 << i)) > 0) {	// i in S
+									int S_j = (~(1 << j))&S;
+									C[S][j] = min(C[S][j], C[S_j][i]+dist[i][j]);
+									ans = C[S][j];
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		cout << fixed << setprecision(2) << ans << endl;
+		
+	}
+}
+```
+
+
+
+### BFS 广度优先遍历
+
+### Dijkstra‘s Algorithm
+
+### Bellman-Ford Algorithm
