--- a/作业/报告4/实验报告模板.md
+++ b/作业/报告4/实验报告模板.md
@@ -12,33 +12,109 @@
 | -------- | ----------- | ------------ | ----------------- |
 | 学号     | 17343100    | 姓名         | 仕润昊            |
 | 电话     | 13280152626 | Email        | 1056627011@qq.com |
-| 开始日期 | 2019/3/15   | 完成日期     | 2019/3/15         |
+| 开始日期 | 2019/4/10   | 完成日期     | 2019/4/12         |
+
+## 完成情况——九道题
+
+![1555055733755](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555055733755.png)
 
 ## 1.实验题目
 
 ### 1014
 
+题意：
+
+求出所有在十进制，十二进制，十六进制下各位数字之和相等的四位十进制数 。
+
 ### 1099 
+
+题意：
+
+有两种飞机A和B，花费分别为costA和costB，容量分别为passengersA和passengersB，现在要N个乘客，每个飞机都要完全装满乘客才能起飞，求最小费用
+
+约束：
+
+1 <= n <= 2,000,000,000 
+
+costA, passengersA, costB, and passengersB are all nonnegative integers having values less than 2,000,000,001
 
 ### 1119 
 
+题意：
+
+1960年发行了4位计算机，从此以后美国十年，计算机的位数变成之前的两倍。输入某一年份，求出这个年份的最大整数n使得n!能被一个字表示。
+
+即算出满足 $n! < 2^k$式子的最大整数n，其中$k=2^{2+(year-1960)/10}$。
+
+约束：
+
+1960<=year<=2160
+
 ### 1203 
+
+题意：
+
+题目 给出了一个有趣的现象：如果一个数字串，以1,3,7,9结尾，则会有一个数，他的三次方以这个数字串结尾，且长度不会超过这个数字串。
+
+约束：
+
+数字串长度1<=n<=10
 
 ### 1214 
 
+题意：
+
+给出数列a1=1，a3=3，a2n=an，a4n+1 = 2\*a2n+1 - an，a4n+3 = 3\*a2n+1 - 2\*an 
+
+现在给定L，求在[1,L]中an=n的个数
+
+约束：
+
+1<=L<=2^32
+
 ### 1231 
+
+题意：
+
+给出两个正整数k，l，问k是否存在小于l的质因数，有的话则给出最小的质因数。
+
+约束：
+
+4<=k<=10^100，2<=l<=10^6
 
 ###  1240 
 
+题意：
+
+有一个损坏的里程表，不能显示数字4，会从数字3直接跳到数字5，给出里程表的读书，求出实际里程。
+
+约束：
+
+里程表的读数为1..999999999且不包含数字4
+
 ### 1259 
+
+题意：
+
+给出一个正整数，求出他有多少种方法可以表示成连续的素数的和。
+
+约束：
+
+2<=n<=10000
 
 ### 1500
 
+题意：
 
+给出一个正整数k，找到与之相邻的两个素数，并求出两个素数只差，如果k是素数则输出0。
+
+约束：
+
+1<=k<=1299709
 
 ##2.实验目的
 
-
+练习高精度算法、贪心算法等，熟练掌握相关的思路。
 
 ##3.程序设计
 
@@ -349,7 +425,9 @@ for (int i = n+1; i <= 1299709; i++) {
 
 ##5.实验总结与心得
 
+耗费时间最长的是回文串那道题，太容易算错，这次的题目基本比较简单，大部分都是高精度算法、贪心算法、筛法等等，主要还是要找到规律才能算对。
 
+思路转换代码能力还是比较差，还要多加练习才行。
 
 ##附录、提交文件清单
 
