--- a/算法模板.md
+++ b/算法模板.md
@@ -928,13 +928,208 @@ int main() {
 
 ### 双调欧几里得旅行商问题
 
+旅行商问题的变种。一个想走一个环路，经过N个地点，并且先从左往右走，再从右往左走，求最短路程
+
+这是双调欧几里得旅行商问题，我们将n个点按照横坐标从小到大的顺序排列后，定义F[i,j]为第i个点到第1个点再到第j个点的最短距离。
+
+![img](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1362299207_1247.jpg) 
+
+状态转移方程为
+$$
+F[i,j] = F[i-1,j]+dist[i,i-1] \quad if \quad j<i-1\\
+F[i,j] = min\{F[i-1,k]+dist[i,k]\} \quad if \quad j >= i-1
+$$
+根据状态转移方程得到相应的程序为
+
+```c++
+for (int i = 3; i <= n; i++) {
+    for (int j = 1; j < i; j++) {
+        if (j < i - 1) {
+            cal[i][j] = cal[i - 1][j] + dist(p[i], p[i - 1]);
+        }
+        else {
+            cal[i][j] = cal[i - 1][1] + dist(p[i], p[1]);
+            for (int k = 2; k < i-1; k++) {
+                cal[i][j] = min(cal[i - 1][k] + dist(p[i], p[k]), cal[i][j]);
+            }
+        }
+    }
+}
+```
+
+
+
+总程序
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <memory.h>
+#include <algorithm>
+#include <math.h>
+#include <iomanip>
+
+using namespace std;
+
+double cal[100][100];
+
+struct point {
+	double x, y;
+	point() {
+
+	}
+	point(double x, double y) {
+		this->x = x;
+		this->y = y;
+	}
+};
+
+point p[100];
+
+double dist(point a, point b) {
+	return sqrt(double((a.x - b.x)*(a.x - b.x)) + double((a.y - b.y)*(a.y - b.y)));
+}
+
+double min(double a, double b) {
+	return (a < b ? a : b);
+}
+
+int main() {
+	int n;
+	while (cin >> n) {
+		for (int i = 1; i <= n; i++) {
+			double x, y;
+			cin >> x >> y;
+			p[i].x = x;
+			p[i].y = y;
+		}
+		cal[1][1] = 0;
+		cal[2][1] = dist(p[2], p[1]);
+		for (int i = 3; i <= n; i++) {
+			for (int j = 1; j < i; j++) {
+				if (j < i - 1) {
+					cal[i][j] = cal[i - 1][j] + dist(p[i], p[i - 1]);
+				}
+				else {
+					cal[i][j] = cal[i - 1][1] + dist(p[i], p[1]);
+					for (int k = 2; k < i-1; k++) {
+						cal[i][j] = min(cal[i - 1][k] + dist(p[i], p[k]), cal[i][j]);
+					}
+				}
+			}
+		}
+		cout << fixed << setprecision(2) << cal[n][n - 1] + dist(p[n], p[n - 1]) << endl;
+	}
+}
+```
+
+
+
 
 
 ### Tiling a Grid With Dominoes 状压dp
 
+![1555065567133](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555065567133.png)
+
+```c++
+//1527
+#include <iostream>
+#include <string>
+#include <vector>
+#include <memory.h>
+#include <algorithm>
+#include <math.h>
+
+using namespace std;
+
+int m[1010][16];
+int main() {
+	int T;
+	cin >> T;
+	int count = 0;
+
+	m[1][0] = m[1][3] = m[1][6] = m[1][12] = m[1][15] = 1;
+	for (int i = 2; i <= 1000; i++) {
+		m[i][0] = m[i - 1][15];
+		m[i][3] = m[i - 1][15] + m[i - 1][12];
+		m[i][6] = m[i - 1][15] + m[i - 1][9];
+		m[i][9] = m[i - 1][6];
+		m[i][12] = m[i - 1][15] + m[i - 1][3];
+		m[i][15] = m[i - 1][15] + m[i - 1][12] + m[i - 1][6] + m[i - 1][3] + m[i - 1][0];
+	}
+
+	while (T--) {
+		count++;
+		cout << count << " ";
+		int n;
+		cin >> n;
+		cout << m[n][15] << endl;
+	}
+
+}
+```
+
 
 
 ### Matrix-Chain Multiplication
+
+```c++
+// See the Cormen book for details of the following algorithm 
+#include<stdio.h> 
+#include<limits.h> 
+
+// Matrix Ai has dimension p[i-1] x p[i] for i = 1..n 
+int MatrixChainOrder(int p[], int n) 
+{ 
+
+	/* For simplicity of the program, one extra row and one 
+	extra column are allocated in m[][]. 0th row and 0th 
+	column of m[][] are not used */
+	int m[n][n]; 
+
+	int i, j, k, L, q; 
+
+	/* m[i,j] = Minimum number of scalar multiplications needed 
+	to compute the matrix A[i]A[i+1]...A[j] = A[i..j] where 
+	dimension of A[i] is p[i-1] x p[i] */
+
+	// cost is zero when multiplying one matrix. 
+	for (i=1; i<n; i++) 
+		m[i][i] = 0; 
+
+	// L is chain length. 
+	for (L=2; L<n; L++) 
+	{ 
+		for (i=1; i<n-L+1; i++) 
+		{ 
+			j = i+L-1; 
+			m[i][j] = INT_MAX; 
+			for (k=i; k<=j-1; k++) 
+			{ 
+				// q = cost/scalar multiplications 
+				q = m[i][k] + m[k+1][j] + p[i-1]*p[k]*p[j]; 
+				if (q < m[i][j]) 
+					m[i][j] = q; 
+			} 
+		} 
+	} 
+
+	return m[1][n-1]; 
+} 
+
+int main() 
+{ 
+	int arr[] = {1, 2, 3, 4}; 
+	int size = sizeof(arr)/sizeof(arr[0]); 
+
+	printf("Minimum number of multiplications is %d ", 
+					MatrixChainOrder(arr, size)); 
+
+	getchar(); 
+	return 0; 
+} 
+```
 
 
 
@@ -944,19 +1139,164 @@ int main() {
 
 ### 0-1  Knapsack Problem
 
+```c
+for (w = 0; w <= W; w++)
+	M[0, w] = 0;
+for (i = 1; i <= n; i++)
+	for (w = 1; w <= W; w++)
+		if (wt[i] > w) M[i, w] = M[i – 1, w];
+		else M[i, w] = max { M[i – 1, w], v[i] + M[i – 1, w – wt[i]] };
+return M[n, W];
+```
+
 
 
 ### Segmented Least Squares
 
+![1555065717479](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555065717479.png)
+
+### 高精度加法 不太完美
+
+```c++
+string get_sum(string adult, string children) {
+	reverse(adult.begin(), adult.end());
+	reverse(children.begin(), children.end());
+	string temp = (adult.length() > children.length() ? adult : children);
+	if (children.length() < adult.length()) {
+		int c_l = children.length();
+		for (int i = c_l; i < adult.length(); i++) {
+			children += '0';
+		}
+	}
+	else if (children.length() > adult.length()) {
+		int a_l = adult.length();
+		for (int i = a_l; i < children.length(); i++) {
+			adult += '0';
+		}
+	}
+	children += '0';
+	adult += '0';
+	temp += '0';
+	int c = 0;
+	for (int i = 0; i < temp.length(); i++) {
+		int cur_sum = children[i] + adult[i] - '0' - '0' + c;
+		c = (cur_sum - 9 > 0 ? 1 : 0);
+		if (cur_sum > 9) {
+			cur_sum -= 10;
+		}
+		temp[i] = cur_sum + '0';
+	}
+	int count = temp.length();
+	while (count > 0 && temp[count - 1] == '0') {
+		count--;
+	}
+	string sum = temp.substr(0, count);
+	reverse(sum.begin(), sum.end());
+	return sum;
+}
+
+```
 
 
-### 高精度加法
+
+### 高精度乘法 不太完美
+
+```c++
+
+string get_sum(string adult, string children) {
+	reverse(adult.begin(), adult.end());
+	reverse(children.begin(), children.end());
+	string temp = (adult.length() > children.length() ? adult : children);
+	if (children.length() < adult.length()) {
+		int c_l = children.length();
+		for (int i = c_l; i < adult.length(); i++) {
+			children += '0';
+		}
+	}
+	else if (children.length() > adult.length()) {
+		int a_l = adult.length();
+		for (int i = a_l; i < children.length(); i++) {
+			adult += '0';
+		}
+	}
+	children += '0';
+	adult += '0';
+	temp += '0';
+	int c = 0;
+	for (int i = 0; i < temp.length(); i++) {
+		int cur_sum = children[i] + adult[i] - '0' - '0' + c;
+		c = (cur_sum - 9 > 0 ? 1 : 0);
+		if (cur_sum > 9) {
+			cur_sum -= 10;
+		}
+		temp[i] = cur_sum + '0';
+	}
+	int count = temp.length();
+	while (count > 0 && temp[count - 1] == '0') {
+		count--;
+	}
+	string sum = temp.substr(0, count);
+	reverse(sum.begin(), sum.end());
+	return sum;
+}
+
+string get_single_mul(string a, char b) {
+	string sum = "0";
+	int n = b - '0';
+	for (int i = 0; i < n; i++) {
+		sum = get_sum(sum, a);
+	}
+	return sum;
+}
+
+string get_mul(string a, string b) {
+	string sum = "0";
+	string mul = "0";
+	reverse(b.begin(), b.end());
+	for (int i = 0; i < b.length(); i++) {
+		mul = get_single_mul(a, b[i]);
+		for (int j = 0; j < i; j++) {
+			mul += "0";
+		}
+		sum = get_sum(sum, mul);
+	}
+	return sum;
+}
+```
 
 
 
-### 高精度乘法
+### 高精度乘法取模 (long long) a * (long long) b % mod
+
+```c++
+long long mul(long long a, long long b, long long mod) {
+	long long c = 0;
+	const int base = 2;
+	for (; b != 0; b /= base) {
+		c += (b % base) * a;
+		c %= mod;
+		a = (a * base) % mod;
+	}
+	return c;
+}
+```
 
 
+
+### 高精度取模 string num, int mod
+
+```c++
+bool mod(string k, int l) {
+	long long m = 0;
+	for (int i = 0; i < k.length(); i++) {
+		m = (m * 10 + (k[i] - '0')) % l;
+	}
+	if (m == 0) {
+		return true;
+	}
+	else return false;
+}
+```
 
 
 
@@ -1126,4 +1466,102 @@ int main() {
 
 ### Dijkstra‘s Algorithm
 
+![1555065412674](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555065412674.png)
+
+![1555065478107](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555065478107.png)
+
 ### Bellman-Ford Algorithm
+
+```c
+RELAX(u, v, w)
+1 if d[v] > d[u] + w(u, v)
+2 then d[v] ← d[u] + w(u, v)
+
+BELLMAN-FORD(G, w, s)
+1 INITIALIZE-SINGLE-SOURCE(G, s)
+2 for i ← 1 to |V[G]| - 1
+3 do for each edge (u, v) ∈ E[G]
+4 do RELAX(u, v, w)
+5 for each edge (u, v) ∈ E[G]
+6 do if d[v] > d[u] + w(u, v)
+7 then return FALSE
+8 return TRUE
+```
+
+
+
+### Floyd-Warshall Algorithm
+
+![1555065321547](C:\Users\Administrator\Desktop\study\算法分析与设计\assets\1555065321547.png)
+
+```c++
+// sicily homework6 1001
+#include <iostream>
+#include <math.h>
+#include <string>
+#include <vector>
+#include <memory.h>
+#include <sstream>
+#include <queue>
+#include <cstring>
+#include <algorithm>
+using namespace std;
+
+int dist[200][200];
+const int inf = 999999999;
+
+int main() {
+	int N, K, Q;
+	for (int i = 0; i < 200; i++) {
+		for (int j = 0; j < 200; j++) {
+			dist[i][j] = inf;
+		}
+		dist[i][i] = 0;
+	}
+	cin >> N >> K >> Q;
+	for (int i = 0; i < K; i++) {
+		int a, b, cost;
+		cin >> a >> b >> cost;
+		if (dist[a][b] > cost) {
+			dist[a][b] = cost;
+		}
+	}
+	for (int k = 1; k <= N; k++) {
+		for (int i = 1; i <= N; i++) {
+			for (int j = 1; j <= N; j++) {
+				if (dist[i][j] > dist[i][k] + dist[k][j]) {
+					dist[i][j] = dist[i][k] + dist[k][j];
+				}
+			}
+		}
+	}
+	for (int i = 0; i < Q; i++) {
+		int a, b;
+		cin >> a >> b;
+		if (dist[a][b] >= inf) {
+			cout << -1 << endl;
+		}
+		else {
+			cout << dist[a][b] << endl;
+		}
+	}
+	system("pause");
+}
+```
+
+
+
+### 埃氏筛法
+
+```c++
+int num[2000000];
+memset(num, 1, sizeof(num));
+for (int i = 2; i <= 1000000; i++) {
+    if (num[i]) {
+        for (int j = 2 * i; j <= 1000000; j += i) {
+            num[j] = 0;
+        }
+    }
+}
+```
+
