--- a/算法模板.md
+++ b/算法模板.md
@@ -1565,3 +1565,47 @@ for (int i = 2; i <= 1000000; i++) {
 }
 ```
 
+### 八皇后问题
+
+```c++
+#include<iostream>
+#include<math.h>
+using namespace std;
+
+int n = 8;
+int total = 0;
+int *c;
+
+bool is_ok(int row) {
+	for (int j = 0; j != row; j++) {
+		if (c[row] == c[j] || row - c[row] == j - c[j] || row + c[row] == j + c[j])
+			return false;
+	}
+	return true;
+}
+
+void queen(int row) {
+	if (row == n)
+		total++;
+	else
+		for (int col = 0; col != n; col++) {
+			c[row] = col;
+			if (is_ok(row))
+				queen(row + 1);
+		}
+}
+
+int main() {
+	int size;
+	while (cin >> size) {
+		c = new int[size];
+		total = 0;
+		n = size;
+		queen(0);
+		cout << total << endl;
+	}
+
+}
+
+```
+
